<resources>
    <string name="app_name">ESoftwaricaApp</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>

    <string name="title_activity_bottom">bottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_addstudent">Add Student</string>
    <string name="title_about">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="select_gender">Select Gender</string>
    <string name="address">Address</string>
</resources>
